--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
   box-sizing: border-box;
   font-family: san-francisco;
 }
+/* Navbar */
 .navbar {
   display: flex;
   flex-direction: row;
@@ -30,5 +31,46 @@
   fill: white;
   height: auto;
   width: 8%;
-  display: inline;
+}
+/* Main content */
+.main-body > * {
+  margin-left: 2%;
+}
+.main-body {
+  background-color: #ffffff;
+  width: 100%;
+  height: 92vh;
+  overflow: auto;
+}
+/* Add section */
+.addSection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: hsl(220, 14%, 96%);
+  margin: 0px;
+  padding-bottom: 5%;
+}
+.addSection p:nth-child(1) {
+  color: #202938;
+  font-size: 150%;
+  font-weight: bold;
+  padding-top: 5%;
+  margin-left: 2%;
+}
+.addSection p:nth-child(2) {
+  color: #6b7380;
+  line-height: 1.5;
+  margin-left: 2%;
+}
+.addSection button:nth-child(3) {
+  color: white;
+  background-color: var(--main-purple);
+  width: 60%;
+  height: 5vh;
+  margin-top: 2vh;
+  padding: 1px;
+  border-radius: 5px;
+  border: none;
+  font-size: 105%;
 }
