--- a/css/styles.css
+++ b/css/styles.css
@@ -47,16 +47,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: hsl(220, 14%, 96%);
+  justify-content: center;
+  background-color: #f3f4f6;
   margin: 0px;
   padding-bottom: 5%;
+  height: 35%;
 }
 .addSection p:nth-child(1) {
   color: #202938;
-  font-size: 150%;
+  font-size: 180%;
   font-weight: bold;
   padding-top: 5%;
-  margin-left: 2%;
 }
 .addSection p:nth-child(2) {
   color: #6b7380;
@@ -73,4 +74,98 @@
   border-radius: 5px;
   border: none;
   font-size: 105%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+.addSection button:nth-child(3) svg {
+  fill: white;
+  width: 8%;
+  height: auto;
+}
+/* Display section */
+.header {
+  display: flex;
+  justify-content: center;
+  margin-top: 3%;
+}
+.header > p {
+  color: #202938;
+  font-size: 135%;
+  font-weight: bold;
+}
+#output-div{
+  display: grid;
+  grid-template-columns: 98%;
+}
+#output-div > #card {
+  border: 1px solid #d1d4db;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 2%;
+  background-color: #f3f4f6;
+}
+#card > #card-name {
+  color: #202938;
+  font-weight: 600;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 3px;
+  padding-right: 3px;
+  font-size: 130%;
+}
+#card > hr {
+  border: 1px solid #d1d4db;
+}
+#card > #card-author {
+  color: #5a0b4d;
+  padding: 3px;
+  font-weight: bold;
+  align-self: center;
+  font-size: 107%;
+}
+#card > #read-status {
+  color: #6b7380;
+  align-self: center;
+  font-weight: bold;
+  font-size: 80%;
+}
+#card > #actions {
+  display: flex;
+  justify-content: center;
+}
+#card > #actions > * {
+  width: 43%;
+  margin: 2%;
+}
+#card > #actions > #delete-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: red;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  padding: 5px;
+  font-size: 90%;
+  font-weight: bolder;
+}
+#card > #actions > #delete-btn svg {
+  fill: white;
+  width: 18%;
+}
+#card > #actions > #toggle-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #5a0b4d;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  padding: 5px;
+  font-size: 90%;
+  font-weight: bolder;
+}
+
