--- a/css/styles.css
+++ b/css/styles.css
@@ -198,7 +198,8 @@
   right: 5%;
   border-radius: 5px;
   background-color: #f3f4f6;
-  border: 1px solid #f3f4f6;
+  border: 1px solid hsl(218, 27%, 70%);
+  
 }
 #dialog > #dialog-header {
   display: grid;
@@ -222,7 +223,7 @@ select,
 .form-input,
 #dialog-header-p,
 #input-submit,
-#close-popup{
+#close-popup {
   width: 90%;
   margin-left: 5%;
 }
@@ -237,16 +238,17 @@ select,
   border-radius: 4px;
   outline: none;
 }
-#dialog input:focus, #input-read-status:focus {
+#dialog input:focus,
+#input-read-status:focus {
   border: 1px solid #5a0b4d;
 }
-#dialog button:nth-child(1){
+#dialog button:nth-child(1) {
   background-color: #f3f4f6;
   border: none;
   padding: 5px;
   color: #5a0b4d;
 }
-#input-submit{
+#input-submit {
   background-color: #5a0b4d;
   color: white;
   border: none;
@@ -255,7 +257,7 @@ select,
   border-radius: 5px;
   font-weight: bold;
 }
-#input-read-status{
+#input-read-status {
   outline: none;
   border-radius: 3px;
 }
